basic website structure is in place

--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -1,21 +1,72 @@
+<?php
+
+function printNavElement($url, $thisPage, $pageNumber, $image, $text)
+{
+  $currentPage = '';
+
+  if ($thisPage == $pageNumber)
+  {
+    $currentPage = 'current-page';
+  }
+
+  echo "
+  <li>
+    <a href=\"$url\" class=\"$currentPage\">
+      <img src=\"$image\" alt=\"\" height=\"20\">
+      $text
+    </a>
+  </li>
+  ";
+}
+?>
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Phalcon PHP Framework</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="shortcut icon" type="image/x-icon" href="<?php echo $this->url->get('img/favicon.ico')?>"/>
-    </head>
-    <body>
-        <div class="container">
-            <?php echo $this->getContent(); ?>
-        </div>
-        <!-- jQuery first, then Popper.js, and then Bootstrap's JavaScript -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    </body>
+<html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <?php // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags ?>
+
+    <?php // Base URL ?>
+    <base href="http://szm-massage-kosmetik.test">
+
+    <?php // Document Title ?>
+    <?= $this->tag->renderTitle() ?>
+
+    <?php // Favicon ?>
+    <link rel="shortcut icon" type="image/x-icon" href="<?= $this->url->get('img/rainbow-heart.ico') ?>"/>
+
+    <?php // CSS ?>
+    <link rel="stylesheet" href="<?= $this->url->get('css/global-styles.css') ?>">
+    <link rel="stylesheet" href="<?= $this->url->get('css/navigation.css') ?>">
+    <link rel="stylesheet" href="<?= $this->url->get('css/footer.css') ?>">
+    <link rel="stylesheet" href="<?= $this->url->get('css/nerd-fonts.css') ?>">
+    <?= $this->assets->outputCss() ?>
+  </head>
+  <body>
+    <nav>
+      <!-- <img src="<?= $this->url->get('img/bars.svg') ?>" alt="" class="menu-symbol"> -->
+
+      <ul>
+        <?php printNavElement('/', $this->view->page, 0, $this->url->get('img/home.svg'), 'SzM') ?>
+        <?php printNavElement('/trager', $this->view->page, 1, $this->url->get('img/trager.svg'), 'Trager') ?>
+        <?php printNavElement('/massage', $this->view->page, 2, $this->url->get('img/massage.svg'), 'Massage') ?>
+        <?php printNavElement('/kosmetik', $this->view->page, 3, $this->url->get('img/cosmetics.svg'), 'Kosmetik') ?>
+        <?php printNavElement('/uebermich', $this->view->page, 4, $this->url->get('img/person.svg'), 'Über&nbsp;mich') ?>
+        <?php printNavElement('/gutschein', $this->view->page, 5, $this->url->get('img/check.svg'), 'Gutschein') ?>
+        <?php printNavElement('/kontakt', $this->view->page, 6, $this->url->get('img/contact.svg'), 'Kontakt') ?>
+      </ul>
+    </nav>
+
+    <main id="main">
+      <?= $this->getContent() ?>
+    </main>
+
+    <footer>
+      <h1>Footer</h1>
+    </footer>
+
+    <?php // JS ?>
+    <?= $this->assets->outputJs() ?>
+  </body>
 </html>
