--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,1 +1,38 @@
-<h1>SzM</h1>
+<div class="curves">
+  <div class="curve-1">
+    <svg id="curve-1" width="100%" height="100%" viewBox="0 0 1920 1080" preserveAspectRatio="none">
+      <path d="M 0 0 H 250 V 500 C 250 884 1920 750 1920 1080 H 0 Z"></path>
+    </svg>
+  </div>
+
+  <div class="curve-2">
+    <svg id="curve-2" width="100%" height="100%" viewBox="0 0 1920 1080" preserveAspectRatio="none">
+      <path d="M 0 0 H 250 V 450 C 250 884 1920 625 1920 1080 H 0 Z"></path>
+    </svg>
+  </div>
+
+  <div class="curve-3">
+    <svg id="curve-3" width="100%" height="100%" viewBox="0 0 1920 1080" preserveAspectRatio="none">
+      <path d="M 0 0 H 250 V 400 C 250 884 1920 500 1920 1080 H 0 Z"></path>
+    </svg>
+  </div>
+</div>
+
+<section class="three-color-section">
+  <div class="showcase">
+    <a href="/trager" class="card card-1">
+      <h1>Trager</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut earum, quo, quasi ipsa fugiat odio amet alias animi, magni ea molestiae quos. Accusamus corporis error placeat beatae cumque sint obcaecati voluptates minima nisi praesentium. Cumque rem non enim dolore, veritatis iste, nihil explicabo ullam repellat aspernatur repellendus, dignissimos quia corporis!</p>
+    </a>
+
+    <a href="/massage" class="card card-2">
+      <h1>Massage</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum dolore dignissimos odit. Ducimus corporis in dolore corrupti assumenda impedit aliquid saepe nam, omnis, laboriosam quaerat rem incidunt similique ratione deserunt. Ea maiores, provident perferendis accusamus aliquam iure aut ipsum aliquid impedit ratione corporis laboriosam corrupti, sequi id iste quaerat dolor.</p>
+    </a>
+
+    <a href="/kosmetik" class="card card-3">
+      <h1>Kosmetik</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, fuga repellat. Atque dolore facere tempore, dolorem quia deleniti neque sapiente illo recusandae quos harum dolores eveniet iure nihil commodi in doloremque quidem praesentium omnis officia ipsam fuga et aliquam. Consectetur alias non maxime repellat facere magnam delectus, sint eum vitae!</p>
+    </a>
+  </div>
+</section>
