--- a/app/views/kosmetik/index.phtml
+++ b/app/views/kosmetik/index.phtml
@@ -1,1 +1,129 @@
 <h1>Kosmetik</h1>
+
+<div class="grid">
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Fusspflege</h2>
+    <p>Unsere Füsse tragen unser ganzes Gewicht und gehen mit uns durchs Leben. Der Mensch weiss schon lange, wie wichtig gesunde Füsse sind, denn die Geschichte der Fusspflege beginnt bereits mit den alten Ägyptern.</p>
+    <p>Die wohltuende und sorgfältige Behandlung Ihrer Füsse gehört nicht nur zum schönen Sommeraccessoire, sondern beugt auch mögliche Fussbeschwerden vor. Deshalb lohnt es sich, wenn Sie sich regelmässig eine Fusspflege gönnen.</p>
+    <p>Meine Fusspflege ist immer individuell auf die Bedürfnisse meiner Kundinnen abgestimmt.</p>
+    <ul class="list">
+      <h3 class="h3 list-title">Sie kann Folgendes beinhalten</h3>
+      <li>Ein Fussbad</li>
+      <li>Eincremen und massieren der Füsse</li>
+      <li>Entfernen der Hornhaut</li>
+      <li>Entfernen abgestorbener Nagelhaut</li>
+      <li>Schneiden, feilen und polieren der Zehennägel</li>
+      <li>Lackieren der Zehennägel</li>
+      <li>Shellac</li>
+    </ul>
+    <ul class="list">
+      <h3 class="h3 list-title">Verwöhnen Sie sich mit einem Kombi-Paket</h3>
+      <li>Fusspflege mit anschliessender Fussreflexzonen-Massage</li>
+      <li>Fusspflege und Maniküre</li>
+    </ul>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Medizinische Kosmetik</h2>
+    <p>Wollen Sie in einer ruhigen und positiven Atmosphäre abschalten, ihr Gesicht entspannen, reinigen und nähren um danach wieder strahlend in den Alltag zurückzukehren?</p>
+    <ul class="list">
+      <h3 class="h3 list-title">Ich empfehle speziell medizinisch-kosmetische Behandlungen</h3>
+      <li>Microdermabrasion</li>
+      <li>Microneedling</li>
+      <li>Säure-Behandlung</li>
+      <li>Ultraschall-Behandlung</li>
+      <li>Phytohormone</li>
+      <li>Vitamine</li>
+    </ul>
+    <h3 class="h3">Säure-Behandlung</h3>
+    <p>Die Säure-Behandlung ist ein chemisches Peeling mit Fruchtsäure. Die Säure dringt in die oberste Hautschicht ein und löst abgestorbene Hautschüppchen ab. So kommt nicht nur die jüngere, frischere Hautschicht zum Vorschein, sondern auch die Wirkstoffe von Seren und Pflegeprodukten können tiefer in die Haut einwirken. Kleinere Fältchen und Pigmentflecken können durch diese Säure-Behandlung gemildert werden und das Hautbild wird ebenmässiger.</p>
+    <h3 class="h3">Ultraschall-Behandlung</h3>
+    <p>Mit Ultraschall kann eine Tiefenreinigung der Haut erzielt werden, welche Hautunreinheiten und Rötungen minimiert und Faltenreduktion ermöglicht. Durch die Stimulation werden ihre Gesichtsmuskeln zusätzlich aktiviert. Sie sehen sofort, wie ihre Haut Frische ausstrahlt und ihnen einen Glow ins Gesicht zaubert. Die Behandlung ist schmerzfrei und ermöglicht schnelle Ergebnisse.</p>
+    <h3 class="h3">Phytohormone</h3>
+    <p>Phytohormone sind rein pflanzliche Hormone, die mit ihren Wirkstoffen erfolgreich gegen die nachlassende Hormonproduktion der Frau eingesetzt werden. Sie wirken dem Abbau von Kollagen, dem Feuchtigkeitsverlust und dem Östrogenmangel entgegen und bauen ein Langzeitdepot auf. Dies verleiht der reifen Haut jugendliche Festigkeit und Elastizität. Ihre natürliche Ausstrahlung wird mit mehr Frische davon profitieren.</p>
+    <h3 class="h3">Vitamine</h3>
+    <p>Ihre Haut ist für hochkonzentrierte Vitamine und Vitamin-Komplexe, von aussen aufgetragen, sehr dankbar. Denn sie wirken wie eine richtige Ernährung, sogar besser als wenn sie oral eingenommen werden. Vitamine sind die wichtigsten Stoffe für die Gesundheit Ihrer Haut: Auf der Oberfläche helfen sie zur Verbesserung Ihres Hautbildes, verleihen bessere Spannkraft und geben Ihnen eine jugendliche Ausstrahlung. In der Tiefe unterstützen die Vitamine den Schutz vor freien Radikalen und stimulieren die Kollagenbildung.</p>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Aknebehandlung</h2>
+    <h3 class="h3">Ursache</h3>
+    <p>Die Hormone spielen bei Akne meistens eine wichtige Rolle. Es sind die männlichen Hormone, die auch Frauen in einer gewissen Menge haben. Auf diese reagieren unsere Talgdrüsen empfindlich und produzieren mehr Talg, der dann schwer abgesondert werden kann, wenn der Talgdrüsenausgang verhornt oder verstopft ist. Dadurch entstehen Mitesser, die sich zu entzündlichen Akne entwickeln können.</p>
+    <ul class="list">
+      <h3 class="h3 list-title">Akne kann ausgelöst werden durch</h3>
+      <li>Pubertät</li>
+      <li>Hormonumstellung im Erwachsenenalter</li>
+      <li>Medikamente</li>
+      <li>Häufiges Kratzen</li>
+    </ul>
+    <h3 class="h3">Behandlung</h3>
+    <p>Egal aus welchem Grund Sie an Akne oder unreiner Haut leiden, gründliche Reinigung im wahrsten Sinne des Wortes ist essentiell. Eine regelmässige, porentiefe Reinigung, wo auch die Mitesser entfernt werden, verhindert, dass sich keine Akne weiterentwickeln kann. Wenn sich bereits Akne gebildet hat, muss vorsichtig behandelt werden, um allfällige Narbenbildung und Großporigkeit zu vermeiden. Oft ist nicht nur das Gesicht betroffen, sondern auch der Rücken, wo man selber nicht gut hinkommt.</p>
+    <p>Wenn ich eine medizinisch-kosmetische Aknebehandlung durchführe, brauche ich Gesichtspflege mit speziellen Produkten des Dermatologen Dr. Gerny. Diese Produkte bewegen sich zwischen Medizin und Kosmetik und sind hochwirksam durch ihre Wirkstoffe. Um sicherzustellen, dass ein optimales Resultat erzielt wird, führe ich immer auch eine Akne-Schulung durch, so dass die richtige Pflege zu Hause weitergeführt wird. Mit dieser Zusammenarbeit werden Sie bald wieder reine, frische Haut haben!</p>
+    <ul class="list">
+      <h3 class="h3 list-tile">Mein Behandlungsansatz</h3>
+      <li>Tiefenreinigung</li>
+      <li>Pflege mit kosmetisch-medizinischen Produkten</li>
+      <li>Akne-Schulung</li>
+      <li>Richtige Pflege zu Hause</li>
+    </ul>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">AntiAging</h2>
+    <ul class="list">
+      <h3 class="h3 list-title">Speziell fürs Anti-Aging empfehle ich medizinisch-kosmetische Behandlungen</h3>
+      <li>Microdermabrasion</li>
+      <li>Microneedling</li>
+      <li>Säure-Behandlung</li>
+      <li>Ultraschall-Behandlung</li>
+      <li>Phytohormone</li>
+      <li>Vitamine</li>
+    </ul>
+    <p>Sie wollen weder Facelifting noch Botoxbehandlung, aber dennoch etwas von Ihrer Jugendlichkeit bewahren? Heutzutage gibt es viele alternative Möglichkeiten, um den Alterungsprozess zu verlangsamen. Mit meinen medizinisch-kosmetischen Angeboten wird Ihre Haut optimal in ihrer Funktion unterstützt, so dass ihr Gesicht seinen Charakter behalten darf und gleichzeitig Ihre Ausstrahlung und Frische garantiert bleibt.</p>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Mikrodermabrasion</h2>
+    <h3 class="h3">Diamant Microdermabrasion, was ist das?</h3>
+    <p>Microdermabrasion ist ein ein sanftes, kontrolliertes Peeling. Nach einer Reinigung wird die Haut mit einem Enzym auf die Behandlung vorbereitet: mit einem passenden Diamantkopf und einem unterschiedlich eingestellten Vakuum werden dann abgestorbene Hautpartikel der obersten Hautschicht gelöst und abgetragen. Jetzt ist die Haut aufnahmebereit für die Seren und Hautpflegemittel, die nun tiefer in die Hautschicht eindringen und bessere Effekte erzielen. Diese effektive Methode stimuliert die Haut bis in die Tiefe und regt die Zellneubildung an.</p>
+    <h3 class="h3">Warum brauche ich das?</h3>
+    <p>Mit zunehmendem Alter verlangsamt sich der Prozess der Zellneubildung und die Fähigkeit, die Hautzellen zu erneuern nimmt ab. Deshalb verschlechtert sich mit den Jahren das Hautbild und beginnt, müde und fahl zu wirken. Wenn Sie regelmässig die abgestorbenen Zellen der oberen Hautschicht abtragen, verstärken Sie wieder die Produktion von neuen Zellen und das Resultat ist eine frische, gesunde Hautschicht.</p>
+    <h3 class="h3">Was kann erreicht werden?</h3>
+    <ul class="list">
+      <p>Diese Behandlung ist ideal, um</p>
+      <li>Pigmentstörungen und Altersflecken zu mildern</li>
+      <li>Linien und Falten zu reduzieren</li>
+      <li>kleine Narben und grosse Poren zu verfeinern</li>
+      <li>der Hautoberfläche einen ebenmässigen, strahlenden Teint zurückzugeben</li>
+      <li>gesamtes Hautbild zu verjüngen</li>
+    </ul>
+    <p>Dieses Peelingverfahren ist schmerzfrei und für alle Hauttypen geeignet.</p>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Microneedling</h2>
+    <p>Mit einem Microneedling dringen feinste Nadeln sachte in die Epidermis ein, mit dem Ziel, die Regeneration der Haut in Gang zu setzen. Als Reaktion wird die Haut so stimuliert, dass neues Kollagen produziert wird. Wichtig zu wissen ist, dass dabei das Gewebe und alle Schichten der Epidermis intakt bleiben. Nach dieser Behandlung können individuelle Wirkstoffkonzentrate bestens aufgenommen werden. Die Wirkung ist sofort und hält lange an. Das Endresultat ist eine verbesserte Durchblutung und Straffung der Haut, was Ihnen eine jugendliche Frische ins Gesicht zaubert. Microneedling ist eine moderne Behandlungsform gegen Linien, Fältchen, grossen Poren, Hyperpigmentierungen, kleinen Narben, Aknespots und Schwangerschaftsstreifen.</p>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Klassische Kosmetik</h2>
+    <p>Wollen Sie in einer ruhigen und positiven Atmosphäre abschalten, ihr Gesicht entspannen, reinigen und nähren um danach wieder strahlend in den Alltag zurückzukehren? Als kompetente und erfahrene Kosmetikerin stimme ich mein Behandlungsangebot immer individuell auf Sie ab: Je nach persönlicher Lebensphase, Jahreszeit und momentanen Situation habe ich verschiedene Möglichkeiten, um Ihnen wieder Frische ins Gesicht zu zaubern.</p>
+    <ul class="list">
+      <p>Mein Angebot umfasst Folgendes</p>
+      <li>Klassische Gesichtsbehandlung</li>
+      <li>Wimpern färben, Wimperndauerwelle</li>
+      <li>Brauen färben und/oder zupfen</li>
+      <li>Pflege für jugendliche, unreine Haut</li>
+      <li>Akne-Behandlung mit porentiefer Reinigung und Akne-Schulung</li>
+      <li>Rückenbehandlung</li>
+      <li>Haarentfernung mit Wachs</li>
+    </ul>
+  </div>
+
+  <div class="cell">
+    <h2 class="h2 cell-title">Manicure</h2>
+    <p>Aussergewöhnlich ist meine klassische Manicure, weil ich sie liegend anbiete. Das heisst, Sie legen sich bei mir gemütlich hin, legen die Füsse hoch und entspannen sich, während ich Ihnen schöne Hände und Fingernägel ermögliche.</p>
+  </div>
+
+</div>
