--- a/public/css/global-styles.css
+++ b/public/css/global-styles.css
@@ -1,4 +1,4 @@
-:not(head, html, style, script, svg, path) {
+:not(head, html, style, script, svg, path, li) {
   display: flow-root;
 }
 
@@ -22,6 +22,8 @@
   --trager-blue: #003f61;
   --coral: #ff7f50;
   --salmon: #ff8c69;
+  --light-blue: #50d0ff;
+  --light-green: #50ff7f;
   --transition: all .4s;
 }
 
@@ -36,8 +38,21 @@ main {
 
 a {
   text-decoration: none;
+  display: inline;
 }
 
 a:is(:not(:visited), :visited) {
   color: #000;
+}
+
+li {
+  list-style-position: inside;
+}
+
+q::before {
+  content: '«';
+}
+
+q::after {
+  content: '»';
 }
