--- a/app/views/gutschein/index.phtml
+++ b/app/views/gutschein/index.phtml
@@ -1,1 +1,12 @@
 <h1>Gutschein</h1>
+<p> Ermöglichen Sie einer geliebten Person, von Innen nach Aussen zu erstrahlen!</p>
+<p>Sei es zu Weihnachten, Valentinstag, Geburtstag, Hochzeitstag oder schlicht als Dankeschön, ein Erlebnisgutschein bei mir passt immer. Denn etwas geschenkt zu bekommen das man sich selbst vielleicht nicht gönnen würde, macht grosse Freude.</p>
+<p>Sie kaufen die Gutscheine in einem bestimmten Wert und unbegrenzt gültig. So kann die beschenkte Person frei und spontan entscheiden, worauf sie richtig Lust hat, oder was sie gerade braucht:</p>
+<ul class="list">
+  <li>Trager Behandlung</li>
+  <li>Massagen</li>
+  <li>Fussreflexzonenmassage</li>
+  <li>Pedicure</li>
+  <li>Manicure</li>
+  <li>kosmetische Behandlungen etc.</li>
+</ul>
