--- a/app/views/trager/index.phtml
+++ b/app/views/trager/index.phtml
@@ -1,4 +1,8 @@
-<h1>Trager&reg;</h1>
+<div class="curve">
+  <svg id="curve" width="100%" height="100%" viewBox="0 0 1920 1080" preserveAspectRatio="none">
+    <path d="M 0 0 H 250 V 400 C 250 884 1920 500 1920 1080 H 0 Z"></path>
+  </svg>
+</div>
 
 <div class="flex">
 
