--- a/public/css/massage-index.css
+++ b/public/css/massage-index.css
@@ -1,11 +1,22 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 1.875rem;
+  padding: 1.875rem;
+  background-color: var(--massage-color);
 }
 
 .cell {
-  margin: 1.875em;
   padding: 1.875em;
   border-radius: 2.5em;
-  border: 1px solid #000;
+  background-color: var(--bg-color);
+}
+
+.curve {
+  height: 100vh;
+  width: 100%;
+}
+
+#curve {
+  fill: var(--massage-color);
 }
