--- a/public/css/trager-index.css
+++ b/public/css/trager-index.css
@@ -4,11 +4,23 @@ b, i {
 
 .flex {
   display: flex;
+  background-color: var(--trager-color);
+  gap: 1.875rem;
+  padding: 1.875rem;
+  color: var(--light-text-color);
 }
 
 .cell {
-  margin: 1.875em;
   padding: 1.875em;
   border-radius: 2.5em;
-  border: 1px solid #000;
+  border: 1px solid var(--light-text-color);
+}
+
+.curve {
+  height: 100vh;
+  width: 100%;
+}
+
+#curve {
+  fill: var(--trager-color);
 }
