--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<section class="three-color-section">
+<div class="three-color-section">
   <div class="showcase">
 
     <a href="/trager" class="card card-1">
@@ -57,4 +57,12 @@
       </div>
     </a>
   </div>
-</section>
+</div>
+
+<div class="transition1">
+  <img src="/img/layered-waves.svg" alt="Transition image">
+</div>
+
+<div class="location">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2702.1298177684384!2d8.529919515865654!3d47.37038471225848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900a03061a255b%3A0xb5dc345fde76c562!2sSelnaustrasse%2015%2C%208001%20Z%C3%BCrich!5e0!3m2!1sde!2sch!4v1617869147579!5m2!1sde!2sch" frameborder="0"></iframe>
+</div>
