--- a/app/views/kosmetik/index.phtml
+++ b/app/views/kosmetik/index.phtml
@@ -130,4 +130,9 @@
     <p>Aussergewöhnlich ist meine klassische Manicure, weil ich sie liegend anbiete. Das heisst, Sie legen sich bei mir gemütlich hin, legen die Füsse hoch und entspannen sich, während ich Ihnen schöne Hände und Fingernägel ermögliche.</p>
   </div>
 
+  <div class="cell">
+    <h2 class="h2 cell-title">Phyto-Cell Behandlung</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In vel, quia nesciunt totam provident laborum. Velit asperiores saepe praesentium ducimus, et doloremque aut, at dolorem, voluptatibus doloribus omnis quisquam error atque ipsa tempore magnam officiis molestias inventore facilis. Est soluta porro dignissimos quaerat beatae voluptatibus a ex corporis, repellendus quod libero odit earum blanditiis, tempora nostrum cum? Nam quis iusto id. Nemo voluptate quam praesentium cumque dicta hic aspernatur repellat! Rerum ipsam eum, illo in cumque alias commodi! Commodi facilis quidem quasi expedita porro reiciendis odio esse, eaque sit, voluptate, illum quos officiis suscipit? Nostrum dignissimos similique repellat autem incidunt.</p>
+  </div>
+
 </div>
